# QtTools

./: .gitignore  LICENSE  README.md
tools/ScreenRecorder/: CMakeLists.txt  Main.qml  main.cpp  recorder.cpp  recorder.h
tools/Screenshot/: CMakeLists.txt  Main.qml  main.cpp  screenshotclass.cpp  screenshotclass.h
tools/Screenshot/Info/: CMakeLists.txt  howto.txt  overview.txt
